--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: demo-app
-        image: avangelstech/avangelsin:latest  # Will be replaced by pipeline
+        image: avangelstech/avangels-nodejs:latest  # Will be replaced by pipeline
         ports:
         - containerPort: 3000
         readinessProbe:
